# -agent

./: README.md
competitor-intel-agent/: README.md  config.example.yaml  pyproject.toml  requirements.txt
competitor-intel-agent/competitor_intel/: agent.py  analyzer.py  cli.py  config.py  fetchers.py  models.py  reporter.py  storage.py
competitor-intel-agent/data/: intel.db
competitor-intel-agent/reports/: 2026-05-09-daily-intel-report.md
